Toontown/logs/toontown-150429_224045.log
ToontownStart: Polling for game2 to finish...
ToontownStart: Game2 is finished.
ToontownStart: Starting the game.
ToontownStart: setting default font
TTLocalizer: Running in language: english
from toontown.toonbase.TTLocalizerEnglish import *
OTPLocalizer: Running in language: english
from otp.otpbase.OTPLocalizerEnglish import *
Injector Opened
ToontownStart: Loading default gui sounds
ToontownStart: serverVersion:  tt-beta-v.1.0.1 (Squirting Flower)
Preloading avatars...
Done preloading avatars.
Traceback (most recent call last):
  File "C:\Panda3D-1.9.0\python\lib\runpy.py", line 162, in _run_module_as_main
    "__main__", fname, loader, pkg_name)
  File "C:\Panda3D-1.9.0\python\lib\runpy.py", line 72, in _run_code
    exec code in run_globals
  File "C:\Users\user\Downloads\Ansem\aviproxy\Fusion364\TT Offline Modded\Toontown\toontown\toonbase\ToontownStartWithInjector.py", line 156, in <module>
    cr = ToontownClientRepository.ToontownClientRepository(serverVersion, launcher)
  File "toontown\distributed\ToontownClientRepository.py", line 68, in __init__
    OTPClientRepository.OTPClientRepository.__init__(self, serverVersion, launcher, playGame=PlayGame.PlayGame)
  File "otp\distributed\OTPClientRepository.py", line 52, in __init__
    ClientRepositoryBase.__init__(self)
  File "C:\Panda3D-1.9.0\direct\distributed\ClientRepositoryBase.py", line 49, in __init__
    self.readDCFile(dcFileNames)
  File "C:\Panda3D-1.9.0\direct\distributed\ConnectionRepository.py", line 311, in readDCFile
    self.importModule(dcImports, moduleName, importSymbols)
  File "C:\Panda3D-1.9.0\direct\distributed\ConnectionRepository.py", line 408, in importModule
    module = __import__(moduleName, globals(), locals(), importSymbols)
  File "toontown\estate\DistributedCannon.py", line 19, in <module>
    from toontown.nametag.NametagFloat3d import NametagFloat3d
  File "toontown\nametag\NametagFloat3d.py", line 3, in <module>
    from toontown.nametag.Nametag3d import Nametag3d
  File "toontown\nametag\Nametag3d.py", line 7, in <module>
    from toontown.nametag import NametagGlobals
  File "toontown\nametag\NametagGlobals.py", line 160
    CCSuit: (
          ^
SyntaxError: invalid syntax
